post-intake revisions

--- a/journal-writings/modernized/04-chapter-2.adoc
+++ b/journal-writings/modernized/04-chapter-2.adoc
@@ -242,7 +242,10 @@ in his infinite love, he has pitied and spared and showed mercy,
 that I have not been cut off nor quite lost; but, at times,
 I am refreshed and comforted as with the glimpse of his presence,
 which is more to the immortal part, than all which this world can afford: so,
-with desires for your preservation with my own, I remain Your affectionate sister,
+with desires for your preservation with my own,
+
+[.signed-section-closing]
+I remain Your affectionate sister,
 
 [.signed-section-signature]
 Elizabeth Woolman, Jun.
