--- a/journal-writings/modernized/08-chapter-6.adoc
+++ b/journal-writings/modernized/08-chapter-6.adoc
@@ -178,7 +178,7 @@ Great is the goodness of the Lord toward his poor creatures.
 An epistle went forth from this Yearly Meeting,
 which I think good to give a place in this journal; being as follows:
 
-[.embedded-content-document.letter]
+[.embedded-content-document.epistle]
 --
 
 [.blurb]
@@ -354,7 +354,7 @@ think on these things and do them, and the God of peace shall be with you.`'`"
 Signed by appointment, and on behalf of our said meeting, by seven Friends.
 
 [.signed-section-context-close]
-On the 28th day of the eleventh month, in the year 1759,
+On the 28th day of the eleventh month, in the year 1759.
 
 --
 
