--- a/journal-writings/modernized/15-keeping-negroes.adoc
+++ b/journal-writings/modernized/15-keeping-negroes.adoc
@@ -78,7 +78,7 @@ and such an inquiry I would earnestly recommend.
 
 [quote.scripture, , Matt. 25:40]
 ____
-"`'`Forasmuch as you did it to the least of these my brethren, you did it unto me.`"
+"`Forasmuch as you did it to the least of these my brethren, you did it unto me.`"
 ____
 
 As many times there are different motives to the same action;
@@ -1380,7 +1380,7 @@ as the two-mentioned ships had carried off of their natives.
 These unhappy English were in danger of being sacrificed to the memory of their friends,
 which some of their nation carried off.`"
 
-Extracts from a collection of voyages.
+=== Extracts from a Collection of Voyages, Vol. I.
 
 The author, a popish missionary,
 speaking of his departing from the negro country to Brazil, says,
