--- a/journal-writings/original/06-chapter-4.adoc
+++ b/journal-writings/original/06-chapter-4.adoc
@@ -5,7 +5,7 @@
 * His journey to Pennsylvania, Maryland, Virginia and North Carolina
 * Considerations on the state of Friends there, and the exercise he was under in traveling among those concerned in keeping slaves: with some observations on this subject
 * His epistle to Friends at New Garden and Cane creek
-* His thoughts on the neglect of a religious care in the education of the negroes
+* His thoughts on the neglect of a religious care in the education of the negroes.
 
 The 13th day of the second month, in the year 1757, being then in good health,
 and abroad with Friends visiting families, I lodged at a Friend`'s house in Burlington;
