--- a/journal-writings/original/08-chapter-6.adoc
+++ b/journal-writings/original/08-chapter-6.adoc
@@ -351,10 +351,10 @@ whatsoever things are of good report; if there be any virtue, if there be any pr
 think on these things and do them, and the God of peace shall be with you.`'`"
 
 [.signed-section-signature]
-"`Signed by appointment, and on behalf of our said meeting, by seven Friends.`"
+Signed by appointment, and on behalf of our said meeting, by seven Friends.
 
 [.signed-section-context-close]
-On the 28th day of the eleventh month, in the year 1759
+On the 28th day of the eleventh month, in the year 1759.
 
 --
 
