--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -1,10 +1,11 @@
 == Chapter VIII.
 
-His visits to Pennsylvania,
-Shrewsbury and Squan--Publishes the second part of his Considerations on
-keeping negroes--The grounds of his appearing in some respects singular in
-his dress--Visits the families of Friends of Ancocas and Mount Holly
-meetings--Visit to the Indians at Wehaloosing on the river Susquehanna.
+[.chapter-synopsis]
+* His visits to Pennsylvania, Shrewsbury and Squan
+* Publishes the second part of his Considerations on keeping negroes
+* The grounds of his appearing in some respects singular in his dress
+* Visits the families of Friends of Ancocas and Mount Holly meetings
+* Visit to the Indians at Wehaloosing on the river Susquehanna.
 
 Having felt my mind drawn toward a visit to a few meetings in Pennsylvania,
 I was very desirous to be rightly instructed as to the time of setting off.
