--- a/journal-writings/original/03-chapter-1.adoc
+++ b/journal-writings/original/03-chapter-1.adoc
@@ -3,7 +3,7 @@
 [.chapter-synopsis]
 * His birth and parentage, with some account of the operations of Divine grace on his mind in his youth
 * His first appearance in the ministry
-* Considerations while young on keeping slaves
+* Considerations while young on keeping slaves.
 
 I have often felt a motion of love to leave some hints
 in writing of my experience of the goodness of God;
