--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -7,7 +7,7 @@
 * Third journey, with Peter Andrews, through part of West and East Jersey
 * Some account of his sister Elizabeth, and her death
 * Fourth journey, with Peter Andrews, through New York and Long Island, to New England
-* Fifth journey, with John Sykes, to the Eastern Shore of Maryland, and the lower counties of Delaware
+* Fifth journey, with John Sykes, to the Eastern Shore of Maryland, and the lower counties of Delaware.
 
 My esteemed friend Abraham Farrington,
 being about to make a visit to Friends on the eastern side of this province,
@@ -279,8 +279,8 @@ II. O Lord, that I may enjoy thy presence; or else my time is lost,
 and my life a snare to my soul.
 
 [.numbered]
-III.
-O Lord, that I may receive bread from thy table, and that thy grace may abound in me.
+III. O Lord, that I may receive bread from thy table,
+and that thy grace may abound in me.
 
 [.numbered]
 IV. O Lord, that I may be acquainted with thy presence,
