--- a/journal-writings/original/07-chapter-5.adoc
+++ b/journal-writings/original/07-chapter-5.adoc
@@ -7,7 +7,7 @@
 * The present circumstances of Friends in Pennsylvania and New Jersey very different from those of our predecessors
 * The drafting of the militia in New Jersey to serve in the army; with some observations on the state of the members of our Society at that time
 * His visit to Friends in Pennsylvania, accompanied by Benjamin Jones
-* Proceedings at the Monthly, Quarterly and Yearly Meetings in Philadelphia, respecting those who keep slaves
+* Proceedings at the Monthly, Quarterly and Yearly Meetings in Philadelphia, respecting those who keep slaves.
 
 A few years past, money being made current in our province for carrying on wars,
 and to be called in again by taxes laid on the inhabitants,
@@ -78,8 +78,7 @@ These committees meeting together, had a weighty conference in the fear of the L
 at which time,
 I perceived there were many Friends under a scruple like that before-mentioned.^
 footnote:[Christians refused to pay taxes to support Heathen temples.
-See Primitive Christianity, part III.
-page 327.]
+See [.book-title]#Primitive Christianity#, part III. page 327]
 
 As scrupling to pay a tax on account of the application,
 hath seldom been heard of heretofore, even amongst men of integrity,
