--- a/journal-writings/original/19-epistle.adoc
+++ b/journal-writings/original/19-epistle.adoc
@@ -1,6 +1,8 @@
 == An Epistle to the Quarterly and Monthly Meetings of Friends.
 
+[.salutation]
 Beloved Friends,
+
 Feeling at this time a renewed concern that the pure Spirit of light and life,
 and the righteous fruits thereof, may spread and prevail amongst mankind,
 there is an engagement on my heart to labour with my brethren in religious profession,
@@ -496,6 +498,8 @@ and desires from the fountain of pure love are opened in me,
 to invite my brethren and fellow creatures to feel for,
 and seek after that which gathers the mind into it.
 
+[.signed-section-signature]
 John Woolman.
 
+[.signed-section-context-close]
 Mount Holly, New Jersey, Fourth month, 1772.
