change 'amongst' to 'among' in modernized editions

--- a/journal-writings/modernized/15-keeping-negroes.adoc
+++ b/journal-writings/modernized/15-keeping-negroes.adoc
@@ -941,7 +941,7 @@ for whatever courts of justice were retained among them,
 or however they decided matters between men of estates,
 it is plain that the cause of the poor was not judged in equity.
 
-It appears that the great men amongst the Jews were fully resolved to have slaves,
+It appears that the great men among the Jews were fully resolved to have slaves,
 even of their own brethren, Jer. 34.
 Notwithstanding the promises and threatenings of the Lord, by the prophet,
 and their solemn covenant to set them free,
