--- a/journal-writings/modernized/18-remarks.adoc
+++ b/journal-writings/modernized/18-remarks.adoc
@@ -232,7 +232,7 @@ may be put in a way to escape these hardships;
 but how few have continued in that pure love which opens our
 understandings to proceed rightly under these difficulties!
 How few have faithfully followed that holy Leader who prepares his people to labor
-for the restoration of true harmony amongst our fellow creatures!
+for the restoration of true harmony among our fellow creatures!
 "`In the pure Gospel spirit we walk by faith and not by sight.`"
 In the obedience of faith we die to the narrowness of self-love,
 and our life being hid with Christ in God,
