prefer lovingkindness as one word

--- a/journal-writings/modernized/10-chapter-8.adoc
+++ b/journal-writings/modernized/10-chapter-8.adoc
@@ -194,7 +194,7 @@ I had an inclination to acquaint some with the manner of my being led into these
 yet upon a deeper thought I was for a time most easy to omit it,
 believing the present dispensation was profitable; and trusting that if I kept my place,
 the Lord in his own time would open the hearts of Friends toward me:
-since which I have had cause to admire his goodness and loving-kindness,
+since which I have had cause to admire his goodness and lovingkindness,
 in leading about and instructing,
 and opening and enlarging my heart in some of our meetings.
 
@@ -742,7 +742,7 @@ This morning in meeting my heart was enlarged in pure love among them,
 and in short plain sentences expressed several things that rested upon me,
 which one of the interpreters gave the people pretty readily;
 after which the meeting ended in supplication,
-and I had cause humbly to acknowledge the loving-kindness of the Lord toward us;
+and I had cause humbly to acknowledge the lovingkindness of the Lord toward us;
 and believed that a door remained open for the faithful disciples of Jesus Christ,
 to labor among these people.
 
