--- a/journal-writings/modernized/15-keeping-negroes.adoc
+++ b/journal-writings/modernized/15-keeping-negroes.adoc
@@ -475,7 +475,7 @@ and in them the desire for the real happiness of mankind,
 has out-balanced the desire of ease, liberty, and many times, of life itself.
 
 If upon a true search, we find that our natures are so far renewed,
-that to exercise righteousness and loving-kindness, according to our ability,
+that to exercise righteousness and lovingkindness, according to our ability,
 towards all men, without respect of persons, is easy to us, or is our delight;
 if our love be so orderly and regular,
 that he who does the will of our Father who is in heaven,
