--- a/journal-writings/modernized/17-harmony.adoc
+++ b/journal-writings/modernized/17-harmony.adoc
@@ -614,7 +614,7 @@ Fox`'s Acts and Monuments, 936.
 
 William Dewsbury, who had suffered much for his religion, in his last sickness,
 encouraging his friends to faithfulness, made mention, like good old Jacob,
-of the loving-kindness of God to him in the course of his life,
+of the lovingkindness of God to him in the course of his life,
 and that through the power of Divine love,
 he for Christ`'s sake had joyfully entered prisons.
 
