--- a/journal-writings/original/03-chapter-1.adoc
+++ b/journal-writings/original/03-chapter-1.adoc
@@ -333,7 +333,7 @@ but though I would gladly have been excused, yet I could not feel my mind clear.
 
 The exercise was heavy: and as I was reading what the Almighty said to Ezekiel,
 respecting his duty as a watchman, the matter was set home more clearly; and then,
-with prayers and tears, I besought the Lord for his assistance, who, in loving-kindness,
+with prayers and tears, I besought the Lord for his assistance, who, in lovingkindness,
 gave me a resigned heart.
 Then, at a suitable opportunity, I went to the public-house;
 and seeing the man amongst much company, I went to him,
