--- a/journal-writings/original/14-chapter-12.adoc
+++ b/journal-writings/original/14-chapter-12.adoc
@@ -211,7 +211,7 @@ and he ordered some drink for me in another vessel.
 
 The like I afterwards went through in several Friends`' houses in America,
 and have also in England, since I came here: and have cause, with humble reverence,
-to acknowledge the loving-kindness of my heavenly Father,
+to acknowledge the lovingkindness of my heavenly Father,
 who hath preserved me in such a tender frame of mind, that none, I believe,
 have ever been offended at what I have said on that occasion.
 
@@ -237,7 +237,7 @@ This morning I wrote a letter, in substance as follows;
 "`My mind is often affected as I pass along,
 under a sense of the state of many poor people,
 who sit under that sort of ministry which requires much outward labour to support it;
-and the loving-kindness of our heavenly Father,
+and the lovingkindness of our heavenly Father,
 in opening a pure Gospel ministry in this nation,
 hath often raised thankfulness in my heart to him.
 I often remember the conflicts of the faithful under persecution,
