--- a/journal-writings/modernized/03-chapter-1.adoc
+++ b/journal-writings/modernized/03-chapter-1.adoc
@@ -342,7 +342,7 @@ but though I would gladly have been excused, yet I could not feel my mind clear.
 The exercise was heavy: and as I was reading what the Almighty said to Ezekiel,
 respecting his duty as a watchman, the matter was set home more clearly; and then,
 with prayers and tears, I besought the Lord for his assistance,
-who, in loving-kindness, gave me a resigned heart.
+who, in lovingkindness, gave me a resigned heart.
 Then, at a suitable opportunity, I went to the public-house;
 and seeing the man among much company, I went to him,
 and told him I wanted to speak with him; so we went aside, and there,
