--- a/journal-writings/modernized/11-chapter-9.adoc
+++ b/journal-writings/modernized/11-chapter-9.adoc
@@ -346,7 +346,7 @@ I passed on, and was at Nottingham Monthly Meeting;
 and at a meeting at Little Britain on first-day:
 and in the afternoon several Friends came to the house where I lodged,
 and we had a little afternoon meeting; and through the humbling power of Truth,
-I had to admire the loving-kindness of the Lord manifested to us.
+I had to admire the lovingkindness of the Lord manifested to us.
 
 On the 26th day I crossed the Susquehanna;
 and coming among people living in outward ease and greatness,
