update spelling Sion > Zion

--- a/journal-writings/original/17-harmony.adoc
+++ b/journal-writings/original/17-harmony.adoc
@@ -125,7 +125,7 @@ The prophet Isaiah represents the unrighteous doings of the Israelites toward th
 as the fruits of an effeminate life; "`As for my people, children are their oppressors,
 and women rule over them; what mean ye that ye beat my people to pieces,
 and grind the faces of the poor, saith the Lord God.`"
-Then he mentions the haughtiness of the daughters of Sion,
+Then he mentions the haughtiness of the daughters of Zion,
 and enumerates many ornaments as instances of their vanity, to uphold which,
 the poor were so hardly dealt with, that he sets forth their poverty,
 their leanness and inability to help themselves,
