modernize some spellings (and words in modernized editions)

--- a/journal-writings/modernized/18-remarks.adoc
+++ b/journal-writings/modernized/18-remarks.adoc
@@ -595,7 +595,7 @@ and then to perpetrate acts of the most shocking barbarity--acts,
 the bare recital of which would cause a feeling mind to shudder with
 abhorrence.--They are taught by repeated cruelties,
 to regard the cries, the tears,
-and the sufferings of a fellow-creature whom they have purchased,
+and the sufferings of a fellow creature whom they have purchased,
 no more than they would the drowning of a fly!
 To the truth of our assertions let the following facts testify:
 "`On board a foreign ship called the Zong, many of the slaves had died,
