update archaic spelling: well behaved > well-behaved

--- a/journal-writings/modernized/11-chapter-9.adoc
+++ b/journal-writings/modernized/11-chapter-9.adoc
@@ -216,7 +216,7 @@ is not in outward fellowship with any religious Society of people,
 but professes nearly the same principles as our Society does,
 and often travels up and down appointing meetings, to which many people come.
 I heard Friends speaking of some of their neighbors, who had been irreligious people,
-that were now his followers, and were become sober well behaved men and women.
+that were now his followers, and were become sober well-behaved men and women.
 
 Some irregularities I hear have been among the people at several of his meetings;
 but from the whole of what I have perceived, I believe the man and some of his followers,
