--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -220,7 +220,7 @@ is not in outward fellowship with any religious Society of people,
 but professes nearly the same principles as our Society doth,
 and often travels up and down appointing meetings, to which many people come.
 I heard Friends speaking of some of their neighbours, who had been irreligious people,
-that were now his followers, and were become sober well behaved men and women.
+that were now his followers, and were become sober well-behaved men and women.
 
 Some irregularities I hear have been amongst the people at several of his meetings;
 but from the whole of what I have perceived, I believe the man and some of his followers,
