--- a/journal-writings/modernized/09-chapter-7.adoc
+++ b/journal-writings/modernized/09-chapter-7.adoc
@@ -447,7 +447,7 @@ and through the gracious extendings of Divine help,
 had some seasoning opportunities in those places.
 We visited Friends at New York and Flushing; and from there to Rahway;
 and here our roads parting,
-I took leave of my beloved companion and true yoke-mate Samuel Eastburn;
+I took leave of my beloved companion and true yokemate Samuel Eastburn;
 and reached home on the 10th day of the eighth month, 1760, where I found my family well:
 and for the favors and protection of the Lord, both inward and outward,
 extended to me in this journey, my heart is humbled in grateful acknowledgements;
