update archaic spelling: cotemporary > contemporary

--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -900,7 +900,7 @@ Making constructions of the law contrary to the true meaning of it,
 was common amongst that people.
 Samuel`'s sons took bribes, and perverted judgment.
 Isaiah complained that they justified the wicked for reward.
-Zephaniah, cotemporary with Jeremiah,
+Zephaniah, contemporary with Jeremiah,
 on account of the injustice of the civil magistrates,
 declared that those judges were evening wolves;
 and that the priests did violence to the law.
